2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume availability of ‘sigaction’.

	* b-isr.c (scratch_from_context) [!HAVE_SIGACTION]: Delete code.
	(catchsigaction): Don't reset the handler.
	[!HAVE_SIGACTION] (catchsig): Delete func.
	(setup_catchsig) [!HAVE_SIGACTION]: Delete code.
	[!HAVE_SIGACTION] (ISR_STACK_SIZE): Delete code,
	leaving unconditionally #define:d ‘ISR_STACK_SIZE’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘getlogin_r’, not ‘getlogin’.

	* b-excwho.c (getusername): Use ‘getlogin_r’ instead
	of ‘getlogin’; share local ‘buf’ with ‘getpwuid_r’.
	* base.h (getlogin_is_secure): Delete #define.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘getpwuid_r’, not ‘getpwuid’.

	* b-excwho.c (getusername) [HAVE_GETUID && HAVE_GETPWUID]:
	Delete code; move #else code to...
	[!HAVE_GETPWUID_R]: ...here.
	[HAVE_GETPWUID_R]: Use ‘getpwuid_r’ to find user name.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use autoconf macro to enable 64-bit file offsets.

	* base.h (_FILE_OFFSET_BITS): Remove #define.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Use ‘%zu’ for ‘size_t’ arg in format string.

	* rlog.c (main): Use ‘%zu’ in format
	string to output the ‘GROK (deltas_count)’.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Cast precision expression for ‘%.*s’ to ‘int’.

	Omission from 2010-05-18,
	"Don't mutate string in ‘checkidentifier’".
	* rcsmap.c (checkidentifier):
	Cast precision expression for ‘%.*s’ to ‘int’.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C] Use ‘%zu’ for ‘size_t’ arg in format string.

	* rcsedit.c (finisheditline): Use ‘%zu’ in
	format string to output the ‘finctx->script_lno’.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Simplify stream/fd sync; avoid ‘fflush’ on input.

	* ci.c (main): For sending ‘workptr’ fd to diff(1),
	don't save current fd position, ‘fflush’ conditionally,
	and restore afterwards; instead, seek to beginning only.